--- a/project_style.css
+++ b/project_style.css
@@ -9,6 +9,41 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  
+}
+
+.fade-in {
+  animation: fadeInUp 1s ease-out;
+}
+
+@keyframes fadeInUp {
+  from {
+      opacity: 0;
+      transform: translateY(20px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+.back-button {
+  position: absolute;
+  top: 20px;
+  left: 35px;
+  padding: 10px 15px;
+  margin-bottom: 30px;
+  font-size: 16px;
+  color: white;
+  background-color: #007BFF;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.back-button:hover {
+  background-color: #0056b3;
 }
 
 html {
@@ -17,6 +52,85 @@ html {
 
 .intro{
     padding-top: 10vh;
-    padding-left: 10vh;
-    height: 45vh
+    height: 5vh;
+    margin-left: 5vh;
+    margin-right: 5vh;
+}
+
+#projects-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  max-width: 1400px;
+  margin: auto;
+  padding: 20px;
+  box-sizing: border-box;
+  float:inline-start
+}
+
+.project_item { 
+  text-align: center;
+  width: calc(50% - 40px);
+  height: fit-content;
+  margin: 20px; 
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  transition: transform 0.2s;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.project_item img {
+  /*all pics w:800  h: 450*/
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.project_item h2 {
+  margin-top: 10px;
+  color: #333;
+}
+
+.project_item:hover {
+  transform: translateY(-5px);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: rgb(0, 0, 0);
+  font-size: 26px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 0.5s ease, opacity 0.3s ease;
+  pointer-events: none; /* removes flickering from hovering*/
+  border-radius: 8px;
+}
+
+.project_item:hover .overlay {
+  opacity: 1;
+  transform: translateY(0); /* Slide the overlay up */
+}
+
+.project_item:hover img {
+  opacity: 0.3;
+}
+
+@media (max-width: 800px) {
+  .project_item {
+      width: calc(100% - 40px); 
+  }
 }
