--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ section {
 .about-details-container {
   display: flex;
   justify-content: center;
+  margin-right: 5vh;
 }
 
 .about-pic {
@@ -334,6 +335,7 @@ section {
   height: 300px;
   width: 300px;
   margin: auto 0;
+  object-fit: contain;
 }
 
 /* EXPERIENCE SECTION */
@@ -344,6 +346,7 @@ section {
   }
   
   .experience-containers {
+    object-fit: contain;
     gap: 2rem;
     margin-bottom: 1rem;
     margin-top: 1rem;
@@ -368,22 +371,21 @@ section {
   
   .experience1-pic {
     border-radius: 50%;
-    margin-left: 2.5rem;
+    margin-left: 1.5rem;
   }
 
   .experience2-pic {
     border-radius: 50%;
-    margin-left: 2.5rem;
+    margin-left: 1.5rem;
   }
   .experience3-pic {
     border-radius: 50%;
-    margin-left: 2.5rem;
+    margin-left: 1.5rem;
   }
   .experience4-pic {
+    object-fit: contain;
     border-radius: 50%;
-    margin-left: 2.5rem;
-    height: 320px;
-    widows: auto;
+    margin-left: 1.5rem;
   }
   
   .arrow {
