--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -39,7 +39,7 @@
       display: block;
       margin-left: 0;
       margin-right: 0;
-      margin-bottom: 2rem;
+      margin-bottom: 20px;
     }
     .arrow {
       display: none;
