--- a/snapspecs/snapspecs_style.css
+++ b/snapspecs/snapspecs_style.css
@@ -64,6 +64,18 @@ body {
     padding-right:40px;
 }
 
+.column{
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: fit-content;
+}
+
+.item {
+    margin-bottom: 10px;
+}
+
 .background_pic{
     max-width: 45%;
     float:inline-end;
@@ -79,22 +91,16 @@ body {
     height: auto;
 }
 
-.column{
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: fit-content;
-}
-
-.item {
-    margin-bottom: 10px;
-}
-
 .introduction{
     padding-top: 20px;
     margin: 40px;
     margin-bottom: 80px;
+}
+
+.outcome{
+    margin: 40px;
+    margin-top: 40px;
+    margin-bottom: 60px;
 }
 
 .issue{
@@ -140,11 +146,6 @@ body {
     margin-bottom: 80px;
 }
 
-.outcome{
-    margin: 40px;
-    margin-top: 40px;
-    margin-bottom: 60px;
-}
 
 .prototype{
     margin: 40px;
@@ -176,49 +177,74 @@ footer {
     margin-left: -10px;
     padding: 20px; /* Adjust padding */
     justify-content: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
 }
 
-.next-project{
-    margin-left: 80%;
-    justify-content: center;
+/* Styling for previous project */
+.prev-project {
+    display: flex;
+    align-items: center;
+}
+
+.prev-project a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Styling for previous project arrow */
+.prev-proj-arrow {
+    font-size: 48px; /* Adjust font size */
+    line-height: 1; /* Ensure arrow does not affect vertical alignment */
+    vertical-align: middle; 
+}
+
+.prev-proj-text {
+    font-size: 24px;
+    margin-left: 10px;
+}
+
+.next-proj-text {
+    font-size: 24px;
+}
+/* Styling for next project */
+.next-project {
+    margin-left: 64%;
+    display: flex;
+    align-items: center;
 }
 
 .next-project a {
-    text-decoration: none; /* Remove underline */
-    color: #333; /* Adjust link color */
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
 }
 
-.next-project a:hover {
-    color: #666; /* Adjust link color on hover */
-    cursor: pointer;
-}
-
-.arrow {
+.next-proj-arrow {
     font-size: 48px; /* Adjust font size */
     line-height: 1; /* Ensure arrow does not affect vertical alignment */
     vertical-align: middle; /* Align arrow with text middle */
 }
 
-.text {
-    font-size: 24px; /* Adjust font size */
-    margin-left: 5px; /* Adjust spacing between arrow and text */
+footer a:hover {
+    text-decoration: underline;
 }
+
 
 @media screen and (max-width: 1000px){
     
     .next-project{
-        margin-left: 75%;
+        margin-left: 55%;
         justify-content: center;
     }
 
     .background_pic{
-        max-width: 45%;
-        float:inline-end;
-        margin: 20px;
         margin-top: 70px;
-        margin-right: -20px;
-        margin-left: 10vh;
-        overflow: hidden;
     }
 }
 
@@ -226,44 +252,25 @@ footer {
 @media screen and (max-width: 830px){
     
     .next-project{
-        margin-left: 65%;
+        margin-left: 50%;
         justify-content: center;
     }
 
     .background_pic{
-        max-width: 45%;
-        float:inline-end;
-        margin: 20px;
         margin-top: 80px;
-        margin-right: -20px;
-        margin-left: 10vh;
-        overflow: hidden;
     }
 
     .issue{
-        background-color: rgb(233, 140, 77);
-        margin-left: -10px;
-        margin-right: -10px;
-        margin-bottom: 60px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        color: white;
-        display: flex;
         flex-direction: column;
     }
 
     .issue h2{
         margin-bottom: 20px; 
         margin-top: 20px;
-        margin-left: 50px;
-        margin-right: 50px;
     }
     
     .issue p{
-        margin: 40px;
         margin-top: -10px;
-        margin-left: 50px;
-        margin-right: 50px;
     }
 
     .text-container{
@@ -273,7 +280,7 @@ footer {
 
     .raise_phone{
         margin: auto;
-        margin-top: 10vh;
+        margin-top: 5vh;
         max-width: 80%;
         padding-left: 20px;
     }    
@@ -292,10 +299,18 @@ footer {
 
 }
 
+@media screen and (max-width: 700px){
+    .next-project{
+        margin-left: 40%;
+        justify-content: center;
+    }
+
+}
+
 @media screen and (max-width: 600px){
     
     .next-project{
-        margin-left: 60%;
+        margin-left: 33%;
         justify-content: center;
     }
 
