--- a/datapulse/datapulse_style.css
+++ b/datapulse/datapulse_style.css
@@ -170,9 +170,9 @@ body {
 }
 
 .chart {
-    width: 100%; /* Full width of the container */
-    height: auto; /* Maintain aspect ratio */
-    object-fit: cover; /* Cover the container */
+    width: 100%;
+    height: auto; 
+    object-fit: cover; 
 }
 
 .caption{
@@ -190,15 +190,15 @@ body {
 }
 
 .scan{
-    max-width: 70%;
+    max-width: 60%;
     padding-top: -20px;
     margin-top: -10px;
     margin-right: -35px;
-    margin-left: -25px;
     overflow: hidden;
 }
 
 .scan_code{
+    padding-top: 10px;
     width:100%
 }
 
@@ -211,50 +211,83 @@ body {
     max-width: 35%;
 }
 
+
 footer {
     margin-left: -10px;
-    padding: 20px; /* Adjust padding */
+    padding: 20px; 
     justify-content: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    padding-bottom: 20px;
 }
 
-.next-project{
-    margin-left: 85%;
-    justify-content: center;
+.prev-project {
+    display: flex;
+    align-items: center;
+}
+
+.prev-project a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+}
+
+
+.prev-proj-arrow {
+    font-size: 48px; 
+    line-height: 1;
+    vertical-align: middle; 
+}
+
+.prev-proj-text {
+    font-size: 24px;
+    margin-left: 10px;
+}
+
+.next-proj-text {
+    font-size: 24px;
+}
+
+.next-project {
+    margin-left: 64%;
+    display: flex;
+    align-items: center;
 }
 
 .next-project a {
-    text-decoration: none; /* Remove underline */
-    color: #333; /* Adjust link color */
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
 }
 
-.next-project a:hover {
-    color: #666; /* Adjust link color on hover */
-    cursor: pointer;
-}
-
-.arrow {
-    font-size: 48px; /* Adjust font size */
-    line-height: 1; /* Ensure arrow does not affect vertical alignment */
-    vertical-align: middle; /* Align arrow with text middle */
-}
-
-.text {
-    font-size: 24px; /* Adjust font size */
-    margin-left: 5px; /* Adjust spacing between arrow and text */
+.next-proj-arrow {
+    font-size: 48px; 
+    line-height: 1; 
+    vertical-align: middle; 
 }
 
 @media screen and (max-width:1200px) {
     .next-project{
-        margin-left: 80%;
-        justify-content: center;
+        margin-left: 60%;
     }
 }
 
-@media screen and (max-width:1000px){
+@media screen and (max-width:1100px){
     .takeaway_content{
         flex-direction: column;
         align-items: center;
     }
+    .takeaway_text{
+        margin-right: -20px;
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width:1000px){
 
     .scan{
         margin-top: 10px;
@@ -267,14 +300,9 @@ footer {
     }
 
     .next-project{
-        margin-left: 75%;
-        justify-content: center;
+        margin-left: 55%;
     }
 
-    .takeaway_text{
-        margin-right: -20px;
-        max-width: 100%;
-    }
 }
 
 @media screen and (max-width:900px){
@@ -312,14 +340,17 @@ footer {
         margin-right: -30px;
         max-width: 100%;
     }
+
+    .next-project{
+        margin-left: 50%;
+    }
 }
 
 
 @media screen and (max-width: 730px){
     
     .next-project{
-        margin-left: 65%;
-        justify-content: center;
+        margin-left: 35%;
     }
 
     .scan_pic{
