--- a/datapulse/datapulse_style.css
+++ b/datapulse/datapulse_style.css
@@ -175,42 +175,37 @@ body {
     object-fit: cover; 
 }
 
-.caption{
-    margin-top: -5px;
-    margin-bottom: -20px;
-}
-
-.takeaway{
+.takeaway {
     margin: 40px;
     margin-top: 30px;
 }
 
-.takeaway_content{
+.takeaway_content {
     display: flex;
+    justify-content: center; 
+    align-items: center;
 }
 
-.scan{
-    max-width: 60%;
-    padding-top: -20px;
-    margin-top: -10px;
-    margin-right: -35px;
-    overflow: hidden;
-}
-
-.scan_code{
-    padding-top: 10px;
-    width:100%
-}
-
-.takeaway h2{
+.takeaway h2 {
     margin-bottom: -5px;
 }
 
-.takeaway_text{
+.takeaway_text {
     margin-right: 40px;
-    max-width: 35%;
+    max-width: 70%;
 }
 
+.temp_bluetooth {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    margin-left: 20px;
+}
+
+.temp {
+    padding-top: 10px;
+    width: 70%;
+}
 
 footer {
     margin-left: -10px;
@@ -279,7 +274,6 @@ footer {
 @media screen and (max-width:1100px){
     .takeaway_content{
         flex-direction: column;
-        align-items: center;
     }
     .takeaway_text{
         margin-right: -20px;
@@ -289,14 +283,13 @@ footer {
 
 @media screen and (max-width:1000px){
 
-    .scan{
+    .temp_bluetooth{
         margin-top: 10px;
-        width: 100%;
     }
 
-    .scan_code{
+    .temp{
         margin-top: 10px;
-        width: 100%;
+        width: 50%;
     }
 
     .next-project{
@@ -331,10 +324,6 @@ footer {
     .proto_img{
         max-width: 70%;
     }
-    
-    .caption{
-        margin-bottom: -30px;
-    }
 
     .takeaway_text{
         margin-right: -30px;
@@ -354,7 +343,7 @@ footer {
     }
 
     .scan_pic{
-        margin-top: 50px;
+        margin-top: 60px;
         margin-right: -35px;
     }
 
