--- a/petplatter/petplatter_style.css
+++ b/petplatter/petplatter_style.css
@@ -49,21 +49,19 @@ body {
 }
 
 
-.app_interface {
-    margin-top: 15vh;
+.model {
+    margin-top: 10vh;
     display: flex;
     justify-content: center;
     gap: 20px; 
-    margin-bottom: 20px; 
   }
   
-  .app_image {
-    max-width: 46%;
+  .model_image {
+    max-width: 50%;
     height: auto;
-    border-radius: 2%;
   }
   
-  .app_caption {
+  .model_caption {
     text-align: center;
     margin-bottom: 40px;
   }
@@ -94,20 +92,40 @@ body {
 .item {
     margin-bottom: 10px;
 }
-
-
-.introduction{
+.introduction {
     padding-top: 10px;
     margin: 40px;
 }
 
-.introduction a{
-    color: rgb(236, 44, 44);
+.introduction-content {
+    display: flex;
 }
 
-.introduction a:hover{
+.introduction a {
+    color: rgb(236, 156, 44);
+}
+
+.introduction a:hover {
     text-decoration-style: wavy;
 }
+
+.shiba_img {
+    margin-top: 40px;
+    max-width: 30%;
+    overflow: hidden;
+}
+
+.shiba {
+    width: 70%;
+    height: auto;
+    float: inline-end;
+}
+
+.intro_text {
+    flex: 1;
+    margin-left: 20px;
+}
+
 
 .outcome {
     margin: 40px;
@@ -115,16 +133,15 @@ body {
     align-items: center;
 }
 
-.finalsystem_pic {
+.gif_pic {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin: 0 auto; 
-    max-width: 90%; 
 }
 
-.finalsystem_res {
+.app_res {
     max-width: 100%;
 }
 
@@ -132,13 +149,16 @@ body {
     margin: 20px; 
 }
 
+.outcome h2{
+    margin-bottom: 30px;
+}
 
 .prototype{
-    background-color: rgb(204, 204, 255);
+    background-color: rgb(204, 243, 255);
     margin-left: -10px;
     margin-right: -10px;
     margin-bottom: 60px;
-    margin-top: 10vh;
+    margin-top: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
     color: rgb(0, 0, 0);
@@ -160,85 +180,76 @@ body {
     margin-right: 20px;
 }
 
-.text-container{
-    max-width: 55%;
+.proto-text-container{
+    max-width: 75%;
     flex-direction: column;
     justify-content: space-around;
+    margin-right: 30px;
 }
 
 .proto_img{
     max-width: 50%;
     padding: 20px;
+    padding-right: 0;
     flex-direction: column;
 }
 
-.chart {
+.web {
     width: 100%; 
     height: auto;
     object-fit: cover; 
 }
 
-.caption{
-    margin-top: -5px;
-    margin-bottom: -20px;
-}
 
-.initial_app{
-    margin:20px;
-    width: calc(100% - 40px);;
-    justify-content: center;
-    overflow: hidden;
-    margin-top: -20px;
-}
-
-.initial_app_img {
-    max-width: 100%;
-    width: auto;
-    height: auto; 
-    object-fit: contain; 
-}
-
-.initial_app_text{
-    margin: 40px;
-    margin-top: -20px;
-    margin-bottom: 20px;
-}
-
-.hardware{
-    margin:40px;
-}
-
-
-.door{
-    margin-top: -20px;
-    max-width: 30%;
-    float:inline-end;
-    margin-left: 5vh;
-    overflow: hidden;
-    margin-left: 20px;
-}
-
-.door_open{
-    width: 100%;
-}
-
-.gif {
+.final_app {
+    margin: 20px;
+    width: calc(100% - 40px);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 40px; 
-    width: calc(100% - 80px);
-    flex-wrap: wrap; 
-    padding-top: 20px;
+    overflow: hidden;
+    margin-top: -20px;
 }
 
-.gif p{
-    margin-left:60px;
-    margin-right: 60px;
+.final_app_img {
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto; 
 }
 
-.demo_gif{
+.final_app_text {
+    margin: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.hardware {
+    margin: 40px;
+}
+
+.hardware-content {
+    display: flex;
+    align-items: flex-start;
+}
+
+.servo {
+    margin-top: 20px;
+    max-width: 30%;
+    margin-left: 20px;
+    overflow: hidden;
+}
+
+.servo_open {
     width: 100%;
+    height: auto;
+}
+
+.hardware_text {
+    flex: 1;
+    margin-right: 20px;
 }
 
 .takeaway{
@@ -246,106 +257,130 @@ body {
     
 }
 
-
 footer {
     margin-left: -10px;
     padding: 20px; 
     justify-content: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
     padding-bottom: 20px;
 }
 
-.prev-project {
-    display: flex;
-    align-items: center;
-}
-
-.prev-project a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: inherit;
-}
-
-
-.prev-proj-arrow {
-    font-size: 48px; 
-    line-height: 1;
-    vertical-align: middle; 
-}
-
-.prev-proj-text {
-    font-size: 24px;
-    margin-left: 10px;
-}
-
-.next-proj-text {
-    font-size: 24px;
-}
-
-.next-project {
-    margin-left: 64%;
-    display: flex;
-    align-items: center;
+.next-project{
+    margin-left: 82%;
+    justify-content: center;
 }
 
 .next-project a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: inherit;
+    text-decoration: none; 
+    color: #333; 
 }
 
-.next-proj-arrow {
+.next-project a:hover {
+    cursor: pointer;
+}
+
+.arrow {
     font-size: 48px; 
     line-height: 1; 
-    vertical-align: middle; 
+    vertical-align: middle;
+}
+
+.text {
+    font-size: 24px;
+    margin-left: 5px;
 }
 
 @media screen and (max-width:1200px) {
     .next-project{
-        margin-left: 60%;
+        margin-left: 80%;
+    }
+}
+
+@media screen and (max-width:1050px){
+    .next-project{
+        margin-left: 74%;
+    }
+}
+
+@media screen and (max-width: 1000px){
+    .servo {
+        max-width: 40%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .hardware-content {
+        flex-direction: column;
+        align-items: center;
+    }
+    .servo {
+        margin-left: 0;
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        max-width: 60%;
+    }
+    .hardware_text {
+        margin-right: 0;
     }
 }
 
 
-@media screen and (max-width:800px){
-    .prototype{
+@media screen and (max-width: 950px) {
+    .introduction-content{
         flex-direction: column;
     }
-
-    .text-container{
+    .shiba_img {
         display: flex;
-        max-width: max-content;
-        margin: 30px;
-        margin-top: 0px;
+        justify-content: center;
+        margin: 20px auto; 
     }
-    .proto_img{
-        max-width: 80%;
-        margin-bottom: -20px;
-    }
-
-    .door{
-        max-width: 50%;
-        margin-top: 40px;
-    }
-
 }
 
 @media screen and (max-width: 820px){
     
     .next-project{
-        margin-left: 40%;
+        margin-left: 68%;
     }
 
 }
 
+@media screen and (max-width: 750px) {
+    .model {
+        margin-top: 15vh;
+      }
+
+    .prototype h2{
+        margin-bottom: 30px; 
+        margin-top: 10px;
+        margin-right: 15px;
+    }
+    
+    .prototype p{
+        margin-bottom: 0px;
+        margin-left: 30px;
+        margin-right: 10px;
+    }
+
+    .proto-text-container{
+        max-width: 60%;
+    }
+    .text-container{
+        max-width: 65%;
+    }
+    .servo{
+        max-width: 55%;
+    }
+
+    .hardware{
+        margin-right: 20px;
+    }
+}
+
+
 @media screen and (max-width: 670px){
+    
     .next-project{
-        margin-left: 33%;
+        margin-left: 60%;
     }
 
 }
