--- a/petplatter/petplatter_style.css
+++ b/petplatter/petplatter_style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
+html {
+    scroll-behavior: smooth;
+  }
+
 body {
   font-family: "Poppins", sans-serif;
   line-height: 30px;
@@ -257,47 +261,73 @@ body {
     
 }
 
+
 footer {
     margin-left: -10px;
     padding: 20px; 
     justify-content: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
     padding-bottom: 20px;
 }
 
-.next-project{
-    margin-left: 82%;
-    justify-content: center;
+.prev-project {
+    display: flex;
+    align-items: center;
+}
+
+.prev-project a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+}
+
+.prev-proj-arrow {
+    font-size: 48px; 
+    line-height: 1;
+    vertical-align: middle; 
+}
+
+.prev-proj-text {
+    font-size: 24px;
+    margin-left: 10px;
+}
+
+.next-proj-text {
+    font-size: 24px;
+}
+
+.next-project {
+    margin-left: 64%;
+    display: flex;
+    align-items: center;
 }
 
 .next-project a {
-    text-decoration: none; 
-    color: #333; 
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
 }
 
-.next-project a:hover {
-    cursor: pointer;
-}
-
-.arrow {
+.next-proj-arrow {
     font-size: 48px; 
     line-height: 1; 
-    vertical-align: middle;
-}
-
-.text {
-    font-size: 24px;
-    margin-left: 5px;
+    vertical-align: middle; 
 }
 
 @media screen and (max-width:1200px) {
     .next-project{
-        margin-left: 80%;
+        margin-left: 55%;
     }
 }
 
 @media screen and (max-width:1050px){
     .next-project{
-        margin-left: 74%;
+        margin-left: 50%;
     }
 }
 
@@ -339,7 +369,7 @@ footer {
 @media screen and (max-width: 820px){
     
     .next-project{
-        margin-left: 68%;
+        margin-left: 40%;
     }
 
 }
@@ -376,11 +406,9 @@ footer {
     }
 }
 
-
 @media screen and (max-width: 670px){
-    
     .next-project{
-        margin-left: 60%;
+        margin-left: 33%;
     }
 
 }
