--- a/tracknsave/tracknsave_style.css
+++ b/tracknsave/tracknsave_style.css
@@ -1,6 +1,10 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
+html {
+    scroll-behavior: smooth;
+  }
+
 body {
   font-family: "Poppins", sans-serif;
   line-height: 30px;
